--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
           <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
           <a href="service.html" class="nav-item nav-link">Our Services</a>
-          <a href="service.html" class="nav-item nav-link">Clients</a>
-          <a href="service.html" class="nav-item nav-link">Events</a>
+          <a href="client.html" class="nav-item nav-link">Partner</a>
+          <a href="event.html" class="nav-item nav-link">Events</a>
           <!-- <div class="nav-item dropdown">
             <a
               href="#"
@@ -128,7 +128,7 @@
             </div>
           </div> -->
           <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-          <a href="contact.html" class="nav-item nav-link">BPL</a>
+          <a href="https://abs-anik.github.io/BPL/" class="nav-item nav-link">BPL</a>
         </div>
       </div>
     </nav>
@@ -578,6 +578,87 @@
       </div>
     </div>
     <!-- Service End -->
+
+    <!-- Partner Profile Start -->
+
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="row g-5 align-items-end mb-5">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="border-start border-5 ps-4">
+              <h6 class="text-body text-uppercase mb-2">Our Partner</h6>
+              <h1 class="display-6 mb-0">
+                ALL Our Valuable Partner
+              </h1>
+            </div>
+          </div>
+          <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
+            <a class="btn custom-btn py-3 px-5" href="">More Partner</a>
+          </div>
+        </div>
+        <div class="row g-4 justify-content-center">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <!-- <div class="service-item bg-light overflow-hidden h-100">
+              <img class="img-fluid" src="img/service-6.jpg" alt="" />
+            </div> -->
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="img/service-6.jpg" alt="Card image">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-light text-center">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Partner Profile End -->
 
 
 
