--- a/client.html
+++ b/client.html
@@ -140,17 +140,16 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">About Us</h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">
+          Our Services
+        </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
               <a class="text-white" href="#">Home</a>
             </li>
-            <!-- <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
-            </li> -->
             <li class="breadcrumb-item custom-text-bold active" aria-current="page">
-              About
+              Our Partner
             </li>
           </ol>
         </nav>
@@ -158,132 +157,85 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
+    <!-- Client Start -->
     <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div
-              class="position-relative overflow-hidden ps-5 pt-5 h-100"
-              style="min-height: 400px"
-            >
-              <img
-                class="position-absolute w-100 h-100"
-                src="img/about.jpg"
-                alt=""
-                style="object-fit: cover"
-              />
-              <div
-                class="position-absolute top-0 start-0 bg-white pe-3 pb-3"
-                style="width: 200px; height: 200px"
-              >
-                <div
-                  class="d-flex flex-column justify-content-center text-center custom-bg h-100 p-3"
-                >
-                  <h1 class="text-white">25</h1>
-                  <h2 class="text-white">Years</h2>
-                  <h5 class="text-white mb-0">Experience</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="h-100">
-              <div class="border-start border-5 ps-4 mb-5">
-                <h6 class="text-body text-uppercase mb-2">About Us</h6>
+        <div class="container">
+          <div class="row g-5 align-items-end mb-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="border-start border-5 ps-4">
+                <h6 class="text-body text-uppercase mb-2">Our Partner</h6>
                 <h1 class="display-6 mb-0">
-                  Unique Solutions For Residentials & Industries!
+                  ALL Our Valuable Partner
                 </h1>
               </div>
-              <p>
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
-              </p>
-              <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
-              </p>
-              <div class="border-top mt-4 pt-4">
-                <div class="row g-4">
-                  <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.1s">
-                    <i
-                      class="fa fa-check fa-2x custom-text flex-shrink-0 me-3"
-                    ></i>
-                    <h6 class="mb-0">Ontime at services</h6>
-                  </div>
-                  <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.3s">
-                    <i
-                      class="fa fa-check fa-2x custom-text flex-shrink-0 me-3"
-                    ></i>
-                    <h6 class="mb-0">24/7 hours services</h6>
-                  </div>
-                  <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.5s">
-                    <i
-                      class="fa fa-check fa-2x custom-text flex-shrink-0 me-3"
-                    ></i>
-                    <h6 class="mb-0">Verified professionals</h6>
-                  </div>
+            </div>
+            <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
+              <a class="btn custom-btn py-3 px-5" href="">More Partner</a>
+            </div>
+          </div>
+          <div class="row g-4 justify-content-center">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+              <!-- <div class="service-item bg-light overflow-hidden h-100">
+                <img class="img-fluid" src="img/service-6.jpg" alt="" />
+              </div> -->
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="img/service-6.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                  <h5 class="card-title text-light text-center">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- About End -->
+    <!-- Client End -->
 
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5 align-items-end mb-5">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="border-start border-5 ps-4">
-              <h6 class="text-body text-uppercase mb-2">Our Team</h6>
-              <h1 class="display-6 mb-0">Our Expert Worker</h1>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-            <p class="mb-0">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
-            </p>
-          </div>
-        </div>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-1.jpg" alt="" />
-              <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-2.jpg" alt="" />
-              <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-3.jpg" alt="" />
-              <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Team End -->
 
     <!-- Footer Start -->
     <div
