--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <img src="img/infotech.png" alt="akij info tech" class="custom-brand-headerlogo">
         </h1>
       </a>
       <button
@@ -107,10 +107,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
+          <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
           <a href="service.html" class="nav-item nav-link">Our Services</a>
-          <div class="nav-item dropdown">
+          <a href="client.html" class="nav-item nav-link">Partner</a>
+          <a href="event.html" class="nav-item nav-link">Events</a>
+          <!-- <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
@@ -124,8 +126,9 @@
               <a href="testimonial.html" class="dropdown-item">Testimonial</a>
               <a href="404.html" class="dropdown-item">404 Page</a>
             </div>
-          </div>
-          <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+          </div> -->
+          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="https://abs-anik.github.io/BPL/" class="nav-item nav-link">BPL</a>
         </div>
       </div>
     </nav>
@@ -145,10 +148,8 @@
             <li class="breadcrumb-item">
               <a class="text-white" href="#">Home</a>
             </li>
-            <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
-            </li>
-            <li class="breadcrumb-item text-primary active" aria-current="page">
+
+            <li class="breadcrumb-item custom-text-bold active" aria-current="page">
               Contact Us
             </li>
           </ol>
@@ -203,17 +204,18 @@
             <div class="position-relative h-100">
               <iframe
                 class="position-relative w-100 h-100"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.377336210178!2d90.4103459!3d23.7695739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c778d94ba6d1%3A0x89051c19123ad2d4!2sAkij%20House%2C%20Bir%20Uttam%20Mir%20Shawkat%20Sarak%2C%20Dhaka%201208!5e0!3m2!1sen!2sbd!4v1679481494210!5m2!1sen!2sbd"
                 frameborder="0"
                 style="min-height: 450px; border: 0"
                 allowfullscreen=""
                 aria-hidden="false"
                 tabindex="0"
               ></iframe>
+
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="border-start border-5 border-primary ps-4 mb-5">
+            <div class="border-start border-5 ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">Contact Us</h6>
               <h1 class="display-6 mb-0">
                 If You Have Any Query, Please Contact Us
@@ -223,7 +225,6 @@
               The contact form is currently inactive. Get a functional and
               working contact form with Ajax & PHP in a few minutes. Just copy
               and paste the files, add a little code and you're done.
-              <a href="https://htmlcodex.com/contact-form">Download Now</a>.
             </p>
             <form>
               <div class="row g-3">
@@ -272,7 +273,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <button class="btn btn-primary py-3 px-5" type="submit">
+                  <button class="btn custom-btn py-3 px-5" type="submit">
                     Send Message
                   </button>
                 </div>
@@ -293,23 +294,22 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <img src="img/infotech.png" alt="akij info tech" class="custom-brand-logo">
             </h1>
             <p>
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex reprehenderit dignissimos veritatis.
             </p>
             <div class="d-flex pt-2">
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-youtube"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-0" href=""
+              <a class="btn btn-square btn-outline-light me-0" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
@@ -327,8 +327,10 @@
             <a class="btn btn-link" href="">About Us</a>
             <a class="btn btn-link" href="">Contact Us</a>
             <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
+            <a class="btn btn-link" href="">Clients</a>
             <a class="btn btn-link" href="">Support</a>
+            <a class="btn btn-link" href="">Events</a>
+            <a class="btn btn-link" href="">Blue Pill Limited</a>
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Newsletter</h4>
@@ -341,7 +343,7 @@
               />
               <button
                 type="button"
-                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                class="btn btn-light py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
                 SignUp
               </button>
@@ -352,14 +354,8 @@
       <div class="container-fluid copyright">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-            </div>
-            <div class="col-md-6 text-center text-md-end">
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-              Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-              <br />Distributed By:
-              <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            <div class="col-md-12 text-center mb-3 mb-md-0">
+              &copy; <a href="#" class="text-center">Akij Info Tech Limited</a>, All Right Reserved.
             </div>
           </div>
         </div>
@@ -368,7 +364,7 @@
     <!-- Footer End -->
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+    <a href="#" class="btn btn-lg custom-btn btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
 
