--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>AITL</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -94,7 +94,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <img src="img/infotech.png" alt="akij info tech" class="custom-brand-headerlogo">
         </h1>
       </a>
       <button
@@ -107,12 +107,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
+          <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link active"
-            >Our Services</a
-          >
-          <div class="nav-item dropdown">
+          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="client.html" class="nav-item nav-link">Partner</a>
+          <a href="event.html" class="nav-item nav-link">Events</a>
+          <!-- <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
@@ -126,8 +126,9 @@
               <a href="testimonial.html" class="dropdown-item">Testimonial</a>
               <a href="404.html" class="dropdown-item">404 Page</a>
             </div>
-          </div>
+          </div> -->
           <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="https://abs-anik.github.io/BPL/" class="nav-item nav-link">BPL</a>
         </div>
       </div>
     </nav>
@@ -147,10 +148,7 @@
             <li class="breadcrumb-item">
               <a class="text-white" href="#">Home</a>
             </li>
-            <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
-            </li>
-            <li class="breadcrumb-item text-primary active" aria-current="page">
+            <li class="breadcrumb-item custom-text-bold active" aria-current="page">
               Our Services
             </li>
           </ol>
@@ -164,15 +162,15 @@
       <div class="container">
         <div class="row g-5 align-items-end mb-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="border-start border-5 border-primary ps-4">
+            <div class="border-start border-5 ps-4">
               <h6 class="text-body text-uppercase mb-2">Our Services</h6>
               <h1 class="display-6 mb-0">
-                Construction And Renovation Solutions
+                ITES Product And Server Solutions
               </h1>
             </div>
           </div>
           <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
-            <a class="btn btn-primary py-3 px-5" href="">More Services</a>
+            <a class="btn custom-btn py-3 px-5" href="">More Services</a>
           </div>
         </div>
         <div class="row g-4 justify-content-center">
@@ -185,7 +183,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -200,7 +198,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -215,7 +213,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -230,7 +228,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -245,7 +243,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -260,7 +258,7 @@
                   Tempor erat elitr rebum at clita dolor diam ipsum sit diam
                   amet diam et eos
                 </p>
-                <a class="small" href=""
+                <a class="small custom-text" href=""
                   >READ MORE<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
@@ -276,7 +274,7 @@
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="border-start border-5 border-primary ps-4 mb-5">
+            <div class="border-start border-5 ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">Appointment</h6>
               <h1 class="display-6 mb-0">
                 A Company Involved In Service And Maintenance
@@ -347,7 +345,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
+                  <button class="btn custom-btn w-100 py-3" type="submit">
                     Get Appointment
                   </button>
                 </div>
@@ -368,23 +366,22 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <img src="img/infotech.png" alt="akij info tech" class="custom-brand-logo">
             </h1>
             <p>
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex reprehenderit dignissimos veritatis.
             </p>
             <div class="d-flex pt-2">
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-1" href=""
+              <a class="btn btn-square btn-outline-light me-1" href=""
                 ><i class="fab fa-youtube"></i
               ></a>
-              <a class="btn btn-square btn-outline-primary me-0" href=""
+              <a class="btn btn-square btn-outline-light me-0" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
@@ -402,8 +399,10 @@
             <a class="btn btn-link" href="">About Us</a>
             <a class="btn btn-link" href="">Contact Us</a>
             <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
+            <a class="btn btn-link" href="">Clients</a>
             <a class="btn btn-link" href="">Support</a>
+            <a class="btn btn-link" href="">Events</a>
+            <a class="btn btn-link" href="">Blue Pill Limited</a>
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Newsletter</h4>
@@ -416,7 +415,7 @@
               />
               <button
                 type="button"
-                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                class="btn btn-light py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
                 SignUp
               </button>
@@ -427,14 +426,8 @@
       <div class="container-fluid copyright">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-            </div>
-            <div class="col-md-6 text-center text-md-end">
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-              Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-              <br />Distributed By:
-              <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            <div class="col-md-12 text-center mb-3 mb-md-0">
+              &copy; <a href="#" class="text-center">Akij Info Tech Limited</a>, All Right Reserved.
             </div>
           </div>
         </div>
@@ -443,7 +436,7 @@
     <!-- Footer End -->
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+    <a href="#" class="btn btn-lg custom-btn btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
 
